@@ -64,6 +64,7 @@ SettingsDialog::SettingsDialog(QWidget* parent, AppConfig& config) :
     connect(m_pCheckBoxAutoConfig,      SIGNAL(clicked()),                this, SLOT(onChange()));
     connect(m_pCheckBoxMinimizeToTray,  SIGNAL(clicked()),                this, SLOT(onChange()));
     connect(m_pCheckBoxAutoHide,        SIGNAL(clicked()),                this, SLOT(onChange()));
+    connect(m_pCheckBoxPreventSleep,    SIGNAL(clicked()),                this, SLOT(onChange()));
     connect(m_pLineEditInterface,       SIGNAL(textEdited(QString)),      this, SLOT(onChange()));
     connect(m_pSpinBoxPort,             SIGNAL(valueChanged(int)),        this, SLOT(onChange()));
     connect(m_pLineEditScreenName,      SIGNAL(textEdited(QString)),      this, SLOT(onChange()));
@@ -84,6 +85,7 @@ void SettingsDialog::accept()
    appConfig().setLanguage(m_pComboLanguage->itemData(m_pComboLanguage->currentIndex()).toString());
    appConfig().setElevateMode(static_cast<ElevateMode>(m_pComboElevate->currentIndex()));
    appConfig().setAutoHide(m_pCheckBoxAutoHide->isChecked());
+   appConfig().setPreventSleep(m_pCheckBoxPreventSleep->isChecked());
    appConfig().setAutoConfig(m_pCheckBoxAutoConfig->isChecked());
    appConfig().setMinimizeToTray(m_pCheckBoxMinimizeToTray->isChecked());
    appConfig().setTLSCertPath(m_pLineEditCertificatePath->text());
@@ -142,6 +144,7 @@ void SettingsDialog::loadFromConfig() {
     m_pLineEditLogFilename->setText(appConfig().logFilename());
     setIndexFromItemData(m_pComboLanguage, appConfig().language());
     m_pCheckBoxAutoHide->setChecked(appConfig().getAutoHide());
+    m_pCheckBoxPreventSleep->setChecked(appConfig().getPreventSleep());
     m_pCheckBoxMinimizeToTray->setChecked(appConfig().getMinimizeToTray());
     m_pLineEditCertificatePath->setText(appConfig().getTLSCertPath());
     m_pCheckBoxEnableCrypto->setChecked(m_appConfig.getCryptoEnabled());
@@ -329,6 +332,7 @@ bool SettingsDialog::isModified()
       || appConfig().language()          != m_pComboLanguage->itemData(m_pComboLanguage->currentIndex()).toString()
       || appConfig().elevateMode()       != static_cast<ElevateMode>(m_pComboElevate->currentIndex())
       || appConfig().getAutoHide()       != m_pCheckBoxAutoHide->isChecked()
+      || appConfig().getPreventSleep()   != m_pCheckBoxPreventSleep->isChecked()
       || appConfig().autoConfig()        != m_pCheckBoxAutoConfig->isChecked()
       || appConfig().getMinimizeToTray() != m_pCheckBoxMinimizeToTray->isChecked()
       || appConfig().getTLSCertPath()    != m_pLineEditCertificatePath->text()
@@ -347,6 +351,7 @@ void SettingsDialog::enableControls(bool enable) {
     m_pComboLanguage->setEnabled(enable);
     m_pComboElevate->setEnabled(enable);
     m_pCheckBoxAutoHide->setEnabled(enable);
+    m_pCheckBoxPreventSleep->setEnabled(enable);
     m_pCheckBoxAutoConfig->setEnabled(enable);
     m_pCheckBoxMinimizeToTray->setEnabled(enable);
     m_pLineEditCertificatePath->setEnabled(enable);
